--- a/Lab_Python.ipynb
+++ b/Lab_Python.ipynb
@@ -255,6 +255,7 @@
     "answer_zero() "
    ]
   },
+  
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -275,10 +276,23 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'United States'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_one():\n",
-    "    return \"YOUR ANSWER HERE\""
+    "    return df['Gold'].idxmax()\n",
+    "\n",
+    "answer_one()"
    ]
   },
   {
@@ -293,14 +307,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "United States\n"
+     ]
+    }
+   ],
    "source": [
     "def answer_two():\n",
-    "    return \"YOUR ANSWER HERE\""
+    "    return (df['Gold'] - df['Gold.1']).idxmax()\n",
+    "print(answer_two())"
    ]
   },
   {
@@ -319,14 +340,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bulgaria'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_three():\n",
-    "    return \"YOUR ANSWER HERE\""
+    "    dfloc = df[(df['Gold'] > 0) & (df['Gold.1'] > 0)]\n",
+    "    return ((abs(dfloc['Gold']-dfloc['Gold.1']))/dfloc['Gold.2']).idxmax()\n",
+    "\n",
+    "answer_three()"
    ]
   },
   {
@@ -341,14 +374,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Afghanistan                            2\n",
+       "Algeria                               27\n",
+       "Argentina                            130\n",
+       "Armenia                               16\n",
+       "Australasia                           22\n",
+       "Australia                            923\n",
+       "Austria                              569\n",
+       "Azerbaijan                            43\n",
+       "Bahamas                               24\n",
+       "Bahrain                                1\n",
+       "Barbados                               1\n",
+       "Belarus                              154\n",
+       "Belgium                              276\n",
+       "Bermuda                                1\n",
+       "Bohemia                                5\n",
+       "Botswana                               2\n",
+       "Brazil                               184\n",
+       "British West Indies                    2\n",
+       "Bulgaria                             411\n",
+       "Burundi                                3\n",
+       "Cameroon                              12\n",
+       "Canada                               846\n",
+       "Chile                                 24\n",
+       "China                               1120\n",
+       "Colombia                              29\n",
+       "Costa Rica                             7\n",
+       "Ivory Coast                            2\n",
+       "Croatia                               67\n",
+       "Cuba                                 420\n",
+       "Cyprus                                 2\n",
+       "                                    ... \n",
+       "Spain                                268\n",
+       "Sri Lanka                              4\n",
+       "Sudan                                  2\n",
+       "Suriname                               4\n",
+       "Sweden                              1217\n",
+       "Switzerland                          630\n",
+       "Syria                                  6\n",
+       "Chinese Taipei                        32\n",
+       "Tajikistan                             4\n",
+       "Tanzania                               4\n",
+       "Thailand                              44\n",
+       "Togo                                   1\n",
+       "Tonga                                  2\n",
+       "Trinidad and Tobago                   27\n",
+       "Tunisia                               19\n",
+       "Turkey                               191\n",
+       "Uganda                                14\n",
+       "Ukraine                              220\n",
+       "United Arab Emirates                   3\n",
+       "United States                       5684\n",
+       "Uruguay                               16\n",
+       "Uzbekistan                            38\n",
+       "Venezuela                             18\n",
+       "Vietnam                                4\n",
+       "Virgin Islands                         2\n",
+       "Yugoslavia                           171\n",
+       "Independent Olympic Participants       4\n",
+       "Zambia                                 3\n",
+       "Zimbabwe                              18\n",
+       "Mixed team                            38\n",
+       "Name: Points, Length: 146, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_four():\n",
-    "    return \"YOUR ANSWER HERE\""
+    "    df['Points'] = df['Gold.2']*3 + df['Silver.2']*2 + df['Bronze.2']*1\n",
+    "    return df['Points']\n",
+    "\n",
+    "answer_four()"
    ]
   },
   {
@@ -368,11 +474,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SUMLEV</th>\n",
+       "      <th>REGION</th>\n",
+       "      <th>DIVISION</th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>COUNTY</th>\n",
+       "      <th>STNAME</th>\n",
+       "      <th>CTYNAME</th>\n",
+       "      <th>CENSUS2010POP</th>\n",
+       "      <th>ESTIMATESBASE2010</th>\n",
+       "      <th>POPESTIMATE2010</th>\n",
+       "      <th>...</th>\n",
+       "      <th>RDOMESTICMIG2011</th>\n",
+       "      <th>RDOMESTICMIG2012</th>\n",
+       "      <th>RDOMESTICMIG2013</th>\n",
+       "      <th>RDOMESTICMIG2014</th>\n",
+       "      <th>RDOMESTICMIG2015</th>\n",
+       "      <th>RNETMIG2011</th>\n",
+       "      <th>RNETMIG2012</th>\n",
+       "      <th>RNETMIG2013</th>\n",
+       "      <th>RNETMIG2014</th>\n",
+       "      <th>RNETMIG2015</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>4779736</td>\n",
+       "      <td>4780127</td>\n",
+       "      <td>4785161</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.002295</td>\n",
+       "      <td>-0.193196</td>\n",
+       "      <td>0.381066</td>\n",
+       "      <td>0.582002</td>\n",
+       "      <td>-0.467369</td>\n",
+       "      <td>1.030015</td>\n",
+       "      <td>0.826644</td>\n",
+       "      <td>1.383282</td>\n",
+       "      <td>1.724718</td>\n",
+       "      <td>0.712594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Autauga County</td>\n",
+       "      <td>54571</td>\n",
+       "      <td>54571</td>\n",
+       "      <td>54660</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.242091</td>\n",
+       "      <td>-2.915927</td>\n",
+       "      <td>-3.012349</td>\n",
+       "      <td>2.265971</td>\n",
+       "      <td>-2.530799</td>\n",
+       "      <td>7.606016</td>\n",
+       "      <td>-2.626146</td>\n",
+       "      <td>-2.722002</td>\n",
+       "      <td>2.592270</td>\n",
+       "      <td>-2.187333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin County</td>\n",
+       "      <td>182265</td>\n",
+       "      <td>182265</td>\n",
+       "      <td>183193</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14.832960</td>\n",
+       "      <td>17.647293</td>\n",
+       "      <td>21.845705</td>\n",
+       "      <td>19.243287</td>\n",
+       "      <td>17.197872</td>\n",
+       "      <td>15.844176</td>\n",
+       "      <td>18.559627</td>\n",
+       "      <td>22.727626</td>\n",
+       "      <td>20.317142</td>\n",
+       "      <td>18.293499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Barbour County</td>\n",
+       "      <td>27457</td>\n",
+       "      <td>27457</td>\n",
+       "      <td>27341</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-4.728132</td>\n",
+       "      <td>-2.500690</td>\n",
+       "      <td>-7.056824</td>\n",
+       "      <td>-3.904217</td>\n",
+       "      <td>-10.543299</td>\n",
+       "      <td>-4.874741</td>\n",
+       "      <td>-2.758113</td>\n",
+       "      <td>-7.167664</td>\n",
+       "      <td>-3.978583</td>\n",
+       "      <td>-10.543299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Bibb County</td>\n",
+       "      <td>22915</td>\n",
+       "      <td>22919</td>\n",
+       "      <td>22861</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-5.527043</td>\n",
+       "      <td>-5.068871</td>\n",
+       "      <td>-6.201001</td>\n",
+       "      <td>-0.177537</td>\n",
+       "      <td>0.177258</td>\n",
+       "      <td>-5.088389</td>\n",
+       "      <td>-4.363636</td>\n",
+       "      <td>-5.403729</td>\n",
+       "      <td>0.754533</td>\n",
+       "      <td>1.107861</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 100 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   SUMLEV  REGION  DIVISION  STATE  COUNTY   STNAME         CTYNAME  \\\n",
+       "0      40       3         6      1       0  Alabama         Alabama   \n",
+       "1      50       3         6      1       1  Alabama  Autauga County   \n",
+       "2      50       3         6      1       3  Alabama  Baldwin County   \n",
+       "3      50       3         6      1       5  Alabama  Barbour County   \n",
+       "4      50       3         6      1       7  Alabama     Bibb County   \n",
+       "\n",
+       "   CENSUS2010POP  ESTIMATESBASE2010  POPESTIMATE2010     ...       \\\n",
+       "0        4779736            4780127          4785161     ...        \n",
+       "1          54571              54571            54660     ...        \n",
+       "2         182265             182265           183193     ...        \n",
+       "3          27457              27457            27341     ...        \n",
+       "4          22915              22919            22861     ...        \n",
+       "\n",
+       "   RDOMESTICMIG2011  RDOMESTICMIG2012  RDOMESTICMIG2013  RDOMESTICMIG2014  \\\n",
+       "0          0.002295         -0.193196          0.381066          0.582002   \n",
+       "1          7.242091         -2.915927         -3.012349          2.265971   \n",
+       "2         14.832960         17.647293         21.845705         19.243287   \n",
+       "3         -4.728132         -2.500690         -7.056824         -3.904217   \n",
+       "4         -5.527043         -5.068871         -6.201001         -0.177537   \n",
+       "\n",
+       "   RDOMESTICMIG2015  RNETMIG2011  RNETMIG2012  RNETMIG2013  RNETMIG2014  \\\n",
+       "0         -0.467369     1.030015     0.826644     1.383282     1.724718   \n",
+       "1         -2.530799     7.606016    -2.626146    -2.722002     2.592270   \n",
+       "2         17.197872    15.844176    18.559627    22.727626    20.317142   \n",
+       "3        -10.543299    -4.874741    -2.758113    -7.167664    -3.978583   \n",
+       "4          0.177258    -5.088389    -4.363636    -5.403729     0.754533   \n",
+       "\n",
+       "   RNETMIG2015  \n",
+       "0     0.712594  \n",
+       "1    -2.187333  \n",
+       "2    18.293499  \n",
+       "3   -10.543299  \n",
+       "4     1.107861  \n",
+       "\n",
+       "[5 rows x 100 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "census_df = pd.read_csv('census.csv')\n",
     "census_df.head()"
@@ -380,14 +698,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Texas'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_five():\n",
-    "    return \"YOUR ANSWER HERE\""
+    "    return census_df['STNAME'].value_counts().idxmax()\n",
+    "\n",
+    "answer_five()"
    ]
   },
   {
@@ -402,14 +731,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['California', 'Texas', 'New York']"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_six():\n",
-    "    return \"YOUR ANSWER HERE\""
+    "    columns = ['STNAME', 'CTYNAME', 'CENSUS2010POP']\n",
+    "    dfloc = census_df[columns]\n",
+    "    dfloc = (dfloc.groupby('STNAME')['CENSUS2010POP'].apply(lambda x: x.nlargest(3).sum()).nlargest(3).index.values.tolist())\n",
+    "    return dfloc\n",
+    "\n",
+    "answer_six()   "
    ]
   },
   {
@@ -426,14 +769,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Harris County'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_seven():\n",
-    "    return \"YOUR ANSWER HERE\""
+    "    popchange = census_df[['STNAME','CTYNAME','POPESTIMATE2015','POPESTIMATE2014','POPESTIMATE2013','POPESTIMATE2012','POPESTIMATE2011','POPESTIMATE2010']]\n",
+    "    popchange = popchange[popchange['STNAME']!=popchange['CTYNAME']]\n",
+    "    index = (popchange.max(axis=1)-popchange.min(axis=1)).idxmax()\n",
+    "    return census_df.loc[index]['CTYNAME']\n",
+    "\n",
+    "answer_seven()"
    ]
   },
   {
@@ -450,12 +807,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STNAME</th>\n",
+       "      <th>CTYNAME</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>896</th>\n",
+       "      <td>Iowa</td>\n",
+       "      <td>Washington County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1419</th>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>Washington County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2345</th>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Washington County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2355</th>\n",
+       "      <td>Rhode Island</td>\n",
+       "      <td>Washington County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3163</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Washington County</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            STNAME            CTYNAME\n",
+       "896           Iowa  Washington County\n",
+       "1419     Minnesota  Washington County\n",
+       "2345  Pennsylvania  Washington County\n",
+       "2355  Rhode Island  Washington County\n",
+       "3163     Wisconsin  Washington County"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_eight():\n",
-    "    return \"YOUR ANSWER HERE\""
+    "    return census_df[(census_df['REGION']<3 ) & (census_df['CTYNAME'].str.startswith('Washington')) & (census_df['POPESTIMATE2015']>census_df['POPESTIMATE2014'])][['STNAME','CTYNAME']]\n",
+    "\n",
+    "answer_eight()"
    ]
   }
  ],
@@ -482,7 +910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
