--- a/Lab_Python.ipynb
+++ b/Lab_Python.ipynb
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -283,16 +283,16 @@
        "'United States'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def answer_one():\n",
+    "def ans1():\n",
     "    return df['Gold'].idxmax()\n",
     "\n",
-    "answer_one()"
+    "ans1()"
    ]
   },
   {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -319,9 +319,9 @@
     }
    ],
    "source": [
-    "def answer_two():\n",
+    "def ans2():\n",
     "    return (df['Gold'] - df['Gold.1']).idxmax()\n",
-    "print(answer_two())"
+    "print(ans2())"
    ]
   },
   {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -349,17 +349,17 @@
        "'Bulgaria'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def answer_three():\n",
-    "    dfloc = df[(df['Gold'] > 0) & (df['Gold.1'] > 0)]\n",
-    "    return ((abs(dfloc['Gold']-dfloc['Gold.1']))/dfloc['Gold.2']).idxmax()\n",
+    "def ans3():\n",
+    "    dloc = df[(df['Gold'] > 0) & (df['Gold.1'] > 0)]\n",
+    "    return ((abs(dloc['Gold']-dloc['Gold.1']))/dloc['Gold.2']).idxmax()\n",
     "\n",
-    "answer_three()"
+    "ans3()"
    ]
   },
   {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -444,17 +444,17 @@
        "Name: Points, Length: 146, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def answer_four():\n",
+    "def ans4():\n",
     "    df['Points'] = df['Gold.2']*3 + df['Silver.2']*2 + df['Bronze.2']*1\n",
     "    return df['Points']\n",
     "\n",
-    "answer_four()"
+    "ans4()"
    ]
   },
   {
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
        "[5 rows x 100 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -707,16 +707,16 @@
        "'Texas'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def answer_five():\n",
+    "def ans5():\n",
     "    return census_df['STNAME'].value_counts().idxmax()\n",
     "\n",
-    "answer_five()"
+    "ans5()"
    ]
   },
   {
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -740,19 +740,19 @@
        "['California', 'Texas', 'New York']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def answer_six():\n",
+    "def ans6():\n",
     "    columns = ['STNAME', 'CTYNAME', 'CENSUS2010POP']\n",
     "    dfloc = census_df[columns]\n",
     "    dfloc = (dfloc.groupby('STNAME')['CENSUS2010POP'].apply(lambda x: x.nlargest(3).sum()).nlargest(3).index.values.tolist())\n",
     "    return dfloc\n",
     "\n",
-    "answer_six()   "
+    "ans6()   "
    ]
   },
   {
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -778,19 +778,19 @@
        "'Harris County'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def answer_seven():\n",
+    "def ans7():\n",
     "    popchange = census_df[['STNAME','CTYNAME','POPESTIMATE2015','POPESTIMATE2014','POPESTIMATE2013','POPESTIMATE2012','POPESTIMATE2011','POPESTIMATE2010']]\n",
     "    popchange = popchange[popchange['STNAME']!=popchange['CTYNAME']]\n",
     "    index = (popchange.max(axis=1)-popchange.min(axis=1)).idxmax()\n",
     "    return census_df.loc[index]['CTYNAME']\n",
     "\n",
-    "answer_seven()"
+    "ans7()"
    ]
   },
   {
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -874,16 +874,16 @@
        "3163     Wisconsin  Washington County"
       ]
      },
-     "execution_count": 44,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def answer_eight():\n",
+    "def ans8():\n",
     "    return census_df[(census_df['REGION']<3 ) & (census_df['CTYNAME'].str.startswith('Washington')) & (census_df['POPESTIMATE2015']>census_df['POPESTIMATE2014'])][['STNAME','CTYNAME']]\n",
     "\n",
-    "answer_eight()"
+    "ans8()"
    ]
   }
  ],
